--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,8 @@ server:
     - .:/mnt
   ports:
     - '3000:5000'
-  environment:
-    PYTHONUSERBASE: /mnt/.env
-    FLASK_DEBUG: 1
+  env_file:
+    - .env
   command: python src/server.py
 
 
