--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,18 @@
+bcrypt
+cffi==1.11.4
 click==6.7
+cryptography==1.7.2
 Flask==0.12.2
+idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
+jwt==0.5.2
 MarkupSafe==1.0
 mongoengine==0.15.0
+passlib==1.7.1
+pyasn1==0.4.2
+pycparser==2.18
+pymongo==3.6.0
 pytz==2017.3
 six==1.11.0
 Werkzeug==0.14.1
