--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,28 @@
+aniso8601==2.0.0
+apispec==0.29.0
+astroid==1.6.1
 click==6.7
 Flask==0.12.2
+flask-apispec==0.4.2
+Flask-Autodoc==0.1.2
 Flask-JWT-Extended==3.6.0
+Flask-RESTful==0.3.6
+invoke==0.22.0
+isort==4.2.15
 itsdangerous==0.24
 Jinja2==2.10
+lazy-object-proxy==1.3.1
 MarkupSafe==1.0
+marshmallow==2.15.0
+mccabe==0.6.1
 mongoengine==0.15.0
 passlib==1.7.1
 PyJWT==1.5.3
+pylint==1.8.2
 pymongo==3.6.0
+pytz==2017.3
+PyYAML==3.12
 six==1.11.0
+webargs==1.8.1
 Werkzeug==0.14.1
+wrapt==1.10.11
