some more tests and things

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,14 @@ version: '2'
 services:
   server:
     image: python:3.6.4
+    container_name: server
     working_dir: /mnt
     volumes:
       - .:/mnt
     ports:
       - 3000:5000
     env_file:
-      - .env
+      - .env # todo just make this reference the items in env/ don't copy
     links:
       - mongodb
     depends_on:
@@ -27,5 +28,6 @@ services:
     command: mongod --logpath=/dev/null #--smallfiles --logpath=/dev/null # --quiet
   mongo-seed:
     build: ./mongo-seed
+    container_name: mongo-seed
     links:
       - mongodb
