--- a/mongo-seed/Dockerfile
+++ b/mongo-seed/Dockerfile
@@ -1,4 +1,4 @@
 FROM mongo
 
 COPY users.json /users.json
-CMD mongoimport --host mongodb --db flask --collection user --type json --file /users.json --jsonArray --drop
+RUN mongoimport --host mongodb --db flask --collection user --type json --file /users.json --jsonArray --drop
