--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,10 +18,10 @@ services:
     image: mongo:latest
     container_name: "mongodb"
     environment:
-            - MONGO_DATA_DIR=/data/db
+            - MONGO_DATA_DIR=/mongo/data/db
             - MONGO_LOG_DIR=/dev/null
     volumes:
-      - ./data/db:/data/db
+      - ./mongo/data/db:/data/db
     ports:
         - 27017:27017
     command: mongod --logpath=/dev/null #--smallfiles --logpath=/dev/null # --quiet
