--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,12 @@
 .virtual
-data
 node_modules
-.idea
+mongo
 gulpfile.js
 package.json
 README.md
 htmlcov
 .coverage
 .DS_Store
+env
+mongo-seed
+postman
